--- a/setting/Setting.html
+++ b/setting/Setting.html
@@ -1,5 +1,4 @@
 <div>
-
 	<div class="row">
 	  <div class="left-cell">
 		  <input id="${id}_MyContent" type="checkbox"
@@ -13,49 +12,234 @@
 	    data-dojo-props="maxLength: 24" />
 	</div>
 
-  <div class="row">
-    <div class="left-cell">
-	    <input id="${id}_MyOrganization" type="checkbox"
-	      data-dojo-attach-point="MyOrganizationCheckBox"
-	      data-dojo-type="dijit/form/CheckBox"/>
-	    <label for="${id}_MyOrganization" class="fixedlen">${nls.scopeOptions.MyOrganization}</label>
-	  </div>
-    <input type="text" placeholder="${nls.scopeOptions.labelPlaceholder}"
-      data-dojo-attach-point="MyOrganizationTextBox"
-      data-dojo-type="dijit/form/ValidationTextBox"
-      data-dojo-props="maxLength: 24" />
-  </div>
-
-  <div class="row">
-    <div class="left-cell">
-	    <input id="${id}_ArcGISOnline" type="checkbox"
-	      data-dojo-attach-point="ArcGISOnlineCheckBox"
-	      data-dojo-type="dijit/form/CheckBox"/>
-	    <label for="${id}_ArcGISOnline" class="fixedlen">${nls.scopeOptions.ArcGISOnline}</label>
+    <div class="row">
+        <div class="left-cell">
+            <input id="${id}_MyOrganization" type="checkbox"
+                   data-dojo-attach-point="MyOrganizationCheckBox"
+                   data-dojo-type="dijit/form/CheckBox" />
+            <label for="${id}_MyOrganization" class="fixedlen">${nls.scopeOptions.MyOrganization}</label>
+        </div>
+        <input type="text" placeholder="${nls.scopeOptions.labelPlaceholder}"
+               data-dojo-attach-point="MyOrganizationTextBox"
+               data-dojo-type="dijit/form/ValidationTextBox"
+               data-dojo-props="maxLength: 24" />
     </div>
-    <input type="text" placeholder="${nls.scopeOptions.labelPlaceholder}"
-      data-dojo-attach-point="ArcGISOnlineTextBox"
-      data-dojo-type="dijit/form/ValidationTextBox"
-      data-dojo-props="maxLength: 24" />
-  </div>
 
-	<!-- <div class="row">
-	  <div class="left-cell">
-		  <input id="${id}_FromUrl" type="checkbox"
-		    data-dojo-attach-point="FromUrlCheckBox"
-		    data-dojo-type="dijit/form/CheckBox"/>
-		  <label for="${id}_FromUrl">${nls.scopeOptions.FromUrl}</label>
-		</div>
-  </div> -->
-
-  <div class="row">
-    <div class="left-cell">
-      <label for="${id}_numPerPage">${nls.numPerPage}</label>
+    <div class="row">
+        <div class="left-cell">
+            <input id="${id}_ArcGISOnline" type="checkbox"
+                   data-dojo-attach-point="ArcGISOnlineCheckBox"
+                   data-dojo-type="dijit/form/CheckBox" />
+            <label for="${id}_ArcGISOnline" class="fixedlen">${nls.scopeOptions.ArcGISOnline}</label>
+        </div>
+        <input type="text" placeholder="${nls.scopeOptions.labelPlaceholder}"
+               data-dojo-attach-point="ArcGISOnlineTextBox"
+               data-dojo-type="dijit/form/ValidationTextBox"
+               data-dojo-props="maxLength: 24" />
     </div>
-    <input id="${id}_numPerPage" type="text" class="numbox"
-      data-dojo-attach-point="numPerBageBox"
-      data-dojo-type="dijit/form/NumberTextBox"
-      data-dojo-props="constraints:{min:1,max:100,places:0}" />
-  </div>
 
+    <div class="row">
+        <div class="left-cell">
+            <label for="${id}_defaultDropdown">${nls.DefaultDropdown}</label>
+        </div>
+        <select id="defaultDropdownSelect" data-dojo-attach-point="defaultDropdownSelect" data-dojo-type="dijit/form/Select"></select>
+    </div>
+
+    <div class="row">
+        <div class="left-cell">
+            <label for="${id}_numPerPage">${nls.numPerPage}</label>
+        </div>
+        <input id="${id}_numPerPage" type="text" class="numbox"
+               data-dojo-attach-point="numPerBageBox"
+               data-dojo-type="dijit/form/NumberTextBox"
+               data-dojo-props="constraints:{min:1,max:100,places:0}" />
+    </div>
+
+
+    <span class="group-label">${nls.ArcGISGroupsLabel}</span>
+    <div class="row">
+        <div class="left-cell">
+            <input id="${id}_ArcGISGroup1" type="checkbox"
+                   data-dojo-attach-point="ArcGISGroupCheckBox1"
+                   data-dojo-type="dijit/form/CheckBox" />
+            <label for="${id}_ArcGISGroup1" class="fixedlen">${nls.scopeOptions.ArcGISGroup1}</label>
+        </div>
+        <input type="text" placeholder="${nls.scopeOptions.labelPlaceholder}"
+               data-dojo-attach-point="ArcGISGroupTextBox1"
+               data-dojo-type="dijit/form/ValidationTextBox"
+               data-dojo-props="maxLength: 24" />
+    </div>
+    <div class="row">
+        <div class="left-cell">
+            <label for="${id}_ArcGISGroupID1">${nls.ArcGISGroupID1}</label>
+        </div>
+        <input type="text"
+               data-dojo-attach-point="ArcGISGroupIDTextBox1"
+               data-dojo-type="dijit/form/ValidationTextBox"
+               data-dojo-props="maxLength: 50" />
+    </div>
+    <div class="row">
+        <div class="left-cell">
+            <label for="${id}_ArcGISGroupTags1">${nls.ArcGISGroupTags1}</label>
+        </div>
+        <input type="text"
+               data-dojo-attach-point="ArcGISGroupTagsTextBox1"
+               data-dojo-type="dijit/form/ValidationTextBox"
+               data-dojo-props="maxLength: 50" />
+    </div>
+
+    <div class="row">
+        <div class="left-cell">
+            <input id="${id}_ArcGISGroup2" type="checkbox"
+                   data-dojo-attach-point="ArcGISGroupCheckBox2"
+                   data-dojo-type="dijit/form/CheckBox" />
+            <label for="${id}_ArcGISGroup2" class="fixedlen">${nls.scopeOptions.ArcGISGroup2}</label>
+        </div>
+        <input type="text" placeholder="${nls.scopeOptions.labelPlaceholder}"
+               data-dojo-attach-point="ArcGISGroupTextBox2"
+               data-dojo-type="dijit/form/ValidationTextBox"
+               data-dojo-props="maxLength: 24" />
+    </div>
+    <div class="row">
+        <div class="left-cell">
+            <label for="${id}_ArcGISGroupID2">${nls.ArcGISGroupID2}</label>
+        </div>
+        <input type="text"
+               data-dojo-attach-point="ArcGISGroupIDTextBox2"
+               data-dojo-type="dijit/form/ValidationTextBox"
+               data-dojo-props="maxLength: 50" />
+    </div>
+    <div class="row">
+        <div class="left-cell">
+            <label for="${id}_ArcGISGroupTags2">${nls.ArcGISGroupTags2}</label>
+        </div>
+        <input type="text"
+               data-dojo-attach-point="ArcGISGroupTagsTextBox2"
+               data-dojo-type="dijit/form/ValidationTextBox"
+               data-dojo-props="maxLength: 50" />
+    </div>
+
+    <div class="row">
+        <div class="left-cell">
+            <input id="${id}_ArcGISGroup3" type="checkbox"
+                   data-dojo-attach-point="ArcGISGroupCheckBox3"
+                   data-dojo-type="dijit/form/CheckBox" />
+            <label for="${id}_ArcGISGroup3" class="fixedlen">${nls.scopeOptions.ArcGISGroup3}</label>
+        </div>
+        <input type="text" placeholder="${nls.scopeOptions.labelPlaceholder}"
+               data-dojo-attach-point="ArcGISGroupTextBox3"
+               data-dojo-type="dijit/form/ValidationTextBox"
+               data-dojo-props="maxLength: 24" />
+    </div>
+    <div class="row">
+        <div class="left-cell">
+            <label for="${id}_ArcGISGroupID3">${nls.ArcGISGroupID3}</label>
+        </div>
+        <input type="text"
+               data-dojo-attach-point="ArcGISGroupIDTextBox3"
+               data-dojo-type="dijit/form/ValidationTextBox"
+               data-dojo-props="maxLength: 50" />
+    </div>
+    <div class="row">
+        <div class="left-cell">
+            <label for="${id}_ArcGISGroupTags3">${nls.ArcGISGroupTags3}</label>
+        </div>
+        <input type="text"
+               data-dojo-attach-point="ArcGISGroupTagsTextBox3"
+               data-dojo-type="dijit/form/ValidationTextBox"
+               data-dojo-props="maxLength: 50" />
+    </div>
+
+    <div class="row">
+        <div class="left-cell">
+            <input id="${id}_ArcGISGroup4" type="checkbox"
+                   data-dojo-attach-point="ArcGISGroupCheckBox4"
+                   data-dojo-type="dijit/form/CheckBox" />
+            <label for="${id}_ArcGISGroup4" class="fixedlen">${nls.scopeOptions.ArcGISGroup4}</label>
+        </div>
+        <input type="text" placeholder="${nls.scopeOptions.labelPlaceholder}"
+               data-dojo-attach-point="ArcGISGroupTextBox4"
+               data-dojo-type="dijit/form/ValidationTextBox"
+               data-dojo-props="maxLength: 24" />
+    </div>
+    <div class="row">
+        <div class="left-cell">
+            <label for="${id}_ArcGISGroupID4">${nls.ArcGISGroupID4}</label>
+        </div>
+        <input type="text"
+               data-dojo-attach-point="ArcGISGroupIDTextBox4"
+               data-dojo-type="dijit/form/ValidationTextBox"
+               data-dojo-props="maxLength: 50" />
+    </div>
+    <div class="row">
+        <div class="left-cell">
+            <label for="${id}_ArcGISGroupTags4">${nls.ArcGISGroupTags4}</label>
+        </div>
+        <input type="text"
+               data-dojo-attach-point="ArcGISGroupTagsTextBox4"
+               data-dojo-type="dijit/form/ValidationTextBox"
+               data-dojo-props="maxLength: 50" />
+    </div>
+
+    <div class="row">
+        <div class="left-cell">
+            <input id="${id}_ArcGISGroup5" type="checkbox"
+                   data-dojo-attach-point="ArcGISGroupCheckBox5"
+                   data-dojo-type="dijit/form/CheckBox" />
+            <label for="${id}_ArcGISGroup5" class="fixedlen">${nls.scopeOptions.ArcGISGroup5}</label>
+        </div>
+        <input type="text" placeholder="${nls.scopeOptions.labelPlaceholder}"
+               data-dojo-attach-point="ArcGISGroupTextBox5"
+               data-dojo-type="dijit/form/ValidationTextBox"
+               data-dojo-props="maxLength: 24" />
+    </div>
+    <div class="row">
+        <div class="left-cell">
+            <label for="${id}_ArcGISGroupID5">${nls.ArcGISGroupID5}</label>
+        </div>
+        <input type="text"
+               data-dojo-attach-point="ArcGISGroupIDTextBox5"
+               data-dojo-type="dijit/form/ValidationTextBox"
+               data-dojo-props="maxLength: 50" />
+    </div>
+    <div class="row">
+        <div class="left-cell">
+            <label for="${id}_ArcGISGroupTags5">${nls.ArcGISGroupTags5}</label>
+        </div>
+        <input type="text"
+               data-dojo-attach-point="ArcGISGroupTagsTextBox5"
+               data-dojo-type="dijit/form/ValidationTextBox"
+               data-dojo-props="maxLength: 50" />
+    </div>
+
+    <div class="row">
+        <div class="left-cell">
+            <input id="${id}_ArcGISGroup6" type="checkbox"
+                   data-dojo-attach-point="ArcGISGroupCheckBox6"
+                   data-dojo-type="dijit/form/CheckBox" />
+            <label for="${id}_ArcGISGroup6" class="fixedlen">${nls.scopeOptions.ArcGISGroup6}</label>
+        </div>
+        <input type="text" placeholder="${nls.scopeOptions.labelPlaceholder}"
+               data-dojo-attach-point="ArcGISGroupTextBox6"
+               data-dojo-type="dijit/form/ValidationTextBox"
+               data-dojo-props="maxLength: 24" />
+    </div>
+    <div class="row">
+        <div class="left-cell">
+            <label for="${id}_ArcGISGroupID6">${nls.ArcGISGroupID6}</label>
+        </div>
+        <input type="text"
+               data-dojo-attach-point="ArcGISGroupIDTextBox6"
+               data-dojo-type="dijit/form/ValidationTextBox"
+               data-dojo-props="maxLength: 50" />
+    </div>
+    <div class="row">
+        <div class="left-cell">
+            <label for="${id}_ArcGISGroupTags6">${nls.ArcGISGroupTags6}</label>
+        </div>
+        <input type="text"
+               data-dojo-attach-point="ArcGISGroupTagsTextBox6"
+               data-dojo-type="dijit/form/ValidationTextBox"
+               data-dojo-props="maxLength: 50" />
+    </div>
 </div>
